# Mathlab

./: CMakeLists.txt  README.md  basics.hpp  big.hpp  bigint.hpp  calculus.hpp  concepts.hpp  dynamic.hpp  function.hpp  hash.hpp  io.hpp  iterator.hpp  linearlist.hpp  linprog.hpp  main.cpp  math.hpp  matrix.hpp  opengl.hpp  poly.hpp  random.hpp  setmap.hpp  slice.hpp  stats.hpp  string.hpp  time.hpp  tree.hpp  vector.hpp
